# civitas

./: .env.example  .gitignore  FINAL_SPEC.md  README.md
.civitas/: PROJECT_STATE.md  TASKS.md
agents/: Dockerfile  README.md  cli.py  pyproject.toml  pytest.ini
agents/data/: demo_scenario_final.json
agents/src/: __init__.py  adk_setup.py  cli.py  cli_server.py  schemas.py  shared_state.py
agents/src/agents/: __init__.py  approval_gate.py  explainability.py  orchestrator.py  perception.py  simulation.py
agents/src/agents/route_agents/: __init__.py  fairness_first.py  speed_first.py
agents/src/tools/: __init__.py  maps.py  render_heatmap.py  scoring.py  simulation_engine.py
agents/tests/: conftest.py  integration_test_agents.py  test_agents.py  test_approval_gate.py  test_explainability.py  test_perception.py  test_route_agents.py  test_simulation.py
agents/tests/fixtures/: perception_test_cases.json  test_scenarios.json
backend/: Dockerfile  firebase_client.py  main.py  requirements.txt
data/: demo_scenario_accident.json  demo_scenario_final.json  demo_scenario_hazard.json
deployment/: cloudbuild.yaml
docs/: API_REFERENCE.md  ARCHITECTURE_SLIDE.txt  CLAUDE_REFERENCE.md  DEMO_SCRIPT_DETAILED.md  DEMO_SCRIPT_FINAL.md  DEVELOPMENT_PLAN.md  EDGE_CASE_HANDLING.md  FINAL_CHECKLIST.md  JUDGE_PRESENTATION_CHECKLIST.md  JUDGE_QA.md  JUDGE_TALKING_POINTS.md  MASTER.md  PERFORMANCE_METRICS.md  PRE_DEMO_REPORT.md  PROJECT_RULES.md  UI_COMPONENTS.md
frontend/: .firebaserc  firebase.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+27 files in other folders)
