[project]
name = "civitas-agents"
version = "1.0.0"
description = "CIVITAS Multi-Agent Emergency Traffic Coordinator"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform>=1.44.0",
    "google-generativeai>=0.3.0",
    "firebase-admin>=6.2.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
